week 2 reformat by ELCA suggestions